fix(emptystate): fix alignment issue in emptystate when className w-50 is passed

--- a/css/src/components/emptyState.css
+++ b/css/src/components/emptyState.css
@@ -17,6 +17,7 @@
 .EmptyState-image {
   width: 100%;
   height: 100%;
+  object-fit: contain;
 }
 
 .EmptyState-title {
@@ -49,6 +50,12 @@
 .EmptyState-text {
   display: flex;
   text-align: center;
+  justify-content: center;
+}
+
+.EmptyState-action {
+  display: flex;
+  justify-content: center;
 }
 
 .EmptyState-title--compressed {
